[package]
name = "ii"
version = "0.1.2"
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
iroh = "1.0.2"
iroh-relay = { version = "1.0.2", features = ["server"] }
md5 = "0.7"
postcard = { version = "1", features = ["use-std"] }
rustls = { version = "0.23.33", default-features = false, features = ["ring"] }
rustls-pki-types = { version = "1.12", features = ["std"] }
serde = { version = "1", features = ["derive"] }
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }

[build-dependencies]
winresource = "0.1"
