[package]
name = "ii"
version = "0.1.7"
edition = "2024"
rust-version = "1.91"
license = "MIT"

[dependencies]
anyhow = "1"
attohttpc = { version = "0.30", default-features = false, features = ["tls-rustls"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hex = "0.4"
iroh = { path = "vendor/iroh/iroh", default-features = false, features = ["tls-ring"] }
iroh-relay = { path = "vendor/iroh/iroh-relay", default-features = false, features = ["server"] }
md5 = "0.7"
postcard = { version = "1", features = ["use-std"] }
rustls = { version = "0.23.33", default-features = false, features = ["ring"] }
rustls-pki-types = { version = "1.12", features = ["std"] }
s3 = { package = "rust-s3", version = "0.37.2", default-features = false, features = ["sync-rustls-tls"] }
reqwest_dav = { version = "0.3.3", default-features = false, features = ["rustls-tls-no-provider"] }
serde = { version = "1", features = ["derive"] }
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
winresource = "0.1"

[features]
default = []
relay-metrics = ["iroh-relay/metrics"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true

[patch.crates-io]
iroh-base = { path = "vendor/iroh/iroh-base" }
iroh-dns = { path = "vendor/iroh/iroh-dns" }
iroh-relay = { path = "vendor/iroh/iroh-relay" }
