[package]
name = "ii"
version = "0.1.11"
edition = "2024"
rust-version = "1.91"
license = "MIT"

[dependencies]
anyhow = "1"
attohttpc = { version = "0.31", default-features = false, features = ["tls-rustls-webpki-roots-ring"] }
base64 = "0.22"
futures-util = "0.3"
iroh = { path = "vendor/iroh/iroh", default-features = false, features = ["tls-ring"] }
iroh-relay = { path = "vendor/iroh/iroh-relay", default-features = false, features = ["server"] }
md5 = { package = "md-5", version = "0.10" }
postcard = { version = "1", features = ["use-std"] }
rustls = { version = "0.23.33", default-features = false, features = ["ring"] }
s3 = { package = "rust-s3", path = "vendor/rust-s3", default-features = false, features = ["sync-rustls-tls"] }
reqwest_dav = { version = "0.3.3", default-features = false, features = ["rustls-tls-no-provider"] }
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem", "ring"] }
serde = { version = "1", features = ["derive"] }
tar = { version = "0.4", default-features = false }
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "std"] }
url = { version = "2.5", features = ["serde"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true

[patch.crates-io]
iroh-base = { path = "vendor/iroh/iroh-base" }
iroh-dns = { path = "vendor/iroh/iroh-dns" }
iroh-relay = { path = "vendor/iroh/iroh-relay" }
aws-creds = { path = "vendor/aws-creds" }
rust-s3 = { path = "vendor/rust-s3" }
attohttpc = { path = "vendor/attohttpc" }
